[package]
name = "dig-protocol"
version = "0.1.0"
edition = "2021"
authors = ["Michael Taylor <michael@berkeleycompute.com>"]
description = "DIG Network L2 protocol types extending Chia's wire protocol (opcodes 200+)"
license = "Apache-2.0"
repository = "https://github.com/DIG-Network/dig-protocol"
readme = "README.md"
keywords = ["chia", "dig", "protocol", "p2p", "gossip"]
categories = ["network-programming", "cryptography::cryptocurrencies"]

[dependencies]
# Chia ecosystem — dig-protocol re-exports all of these so consumers only need one import.
chia-protocol = "0.26"
chia-traits = "0.26"
chia_streamable_macro = "0.26"
chia-sha2 = "0.26"
chia-ssl = "0.26"
chia-sdk-client = { version = "0.28", default-features = false }

# Serialization for DigMessageType
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"

[features]
# TLS backend forwarding — consumers enable these on dig-protocol instead of chia-sdk-client.
native-tls = ["chia-sdk-client/native-tls"]
rustls = ["chia-sdk-client/rustls"]

[lints.rust]
unsafe_code = "deny"
